Giga refacto avec la classe results sur toutes les entry