@@ -1,9 +1,11 @@
 package fr.fges.services.entriesServices;
-
 import fr.fges.data.models.BoardGame;
 import fr.fges.data.repositories.games.GameCollectionDao;
-import fr.fges.services.recommend.RandomNElementsStrategy;
 import fr.fges.services.recommend.RecommendationStrategy;
+import fr.fges.services.results.Result;
+import fr.fges.services.results.Success;
+import fr.fges.services.results.Failure;
+import java.util.List;
 
 public class RecommendOneGameService {
     private final RecommendationStrategy strategy;
@@ -12,7 +14,15 @@ public class RecommendOneGameService {
         this.strategy = strategy;
     }
 
-    public BoardGame recommendOneGame(int numberOfPlayers, GameCollectionDao gamesDao) {
-        return strategy.getNRandomGame(1, gamesDao.findByNumberOfPlayers(numberOfPlayers)).getFirst();
+    public Result<BoardGame, String> recommendOneGame(int numberOfPlayers, GameCollectionDao gamesDao) {
+        if (numberOfPlayers <= 0) {
+            return new Failure<>("Number of players must be greater than zero.");
+        }
+        List<BoardGame> possibleGames = gamesDao.findByNumberOfPlayers(numberOfPlayers);
+        if (possibleGames.isEmpty()) {
+            return new Failure<>("No games available for this number of players.");
+        }
+        BoardGame game = strategy.getNRandomGame(1, possibleGames).get(0); // getFirst remplacé par get(0)
+        return new Success<>(game);
     }
 }
